--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,7 @@
 
-
+body{
+  /* background-color: rgb(15, 60, 119); */
+}
 .App {
   text-align: center;
 }
@@ -30,17 +32,22 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+/* media queries */
+@media only screen and (max-width: 1100px) {
+  #card-info{
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  #row-cards{
+    display:flex;
+    justify-content: center;
+   
   }
 }
 
-.titleBlog{
-  font-family: 'Lobster', cursive;
-  font-size: 40px;
 
+
+.ant-card-body{
+  padding:0;
 }
